objects/advpm__Time__c.object
<CustomObject>
    <customHelpPage>advpm__HelpTime</customHelpPage>
    <fields>
        <fullName>Business_Unit_Cluster_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Legal__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Unit_Legal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <referenceTo>Work_Category__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_ID__c</fullName>
        <formula>advpm__Matter__r.Matter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cluster__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__ActivityId__c</fullName>
        <label>ActivityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__ActivityName__c</fullName>
        <label>ActivityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Activity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; advpm__ActivityId__c ,  advpm__ActivityName__c, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Billing_Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill</fullName>
                    <default>true</default>
                    <label>Bill</label>
                </value>
                <value>
                    <fullName>Do Not Bill</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Billing_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unprocessed</fullName>
                    <default>true</default>
                    <label>Unprocessed</label>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Not Billed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__ContentId__c</fullName>
        <label>ContentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__ContentName__c</fullName>
        <label>ContentName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Content__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; advpm__ContentId__c , advpm__ContentName__c, &quot;_top&quot;)</formula>
        <label>Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advpm__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Exported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Exported_On__c</fullName>
        <label>Exported On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__My_Timekeeper_Time__c</fullName>
        <formula>IF($User.Id = advpm__Timekeeper__r.advpm__Staff__c, &quot;True&quot;, &quot;False&quot;)</formula>
        <label>My Timekeeper&apos;s Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Rate_Amount__c</fullName>
        <label>Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>advpm__Rate__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Task_Code__c</fullName>
        <label>Task Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A101 Plan and prepare for</fullName>
                </value>
                <value>
                    <fullName>A102 Research</fullName>
                </value>
                <value>
                    <fullName>A103 Draft/Revise</fullName>
                </value>
                <value>
                    <fullName>A104 Review/Analyze</fullName>
                </value>
                <value>
                    <fullName>A105 Communicate (in firm)</fullName>
                </value>
                <value>
                    <fullName>A106 Communicate (with client)</fullName>
                </value>
                <value>
                    <fullName>A107 Communicate (other outside counsel)</fullName>
                </value>
                <value>
                    <fullName>A108 Communicate (other external)</fullName>
                </value>
                <value>
                    <fullName>A109 Appear for/attend</fullName>
                </value>
                <value>
                    <fullName>A110 Manage data/files</fullName>
                </value>
                <value>
                    <fullName>A111 Other</fullName>
                </value>
                <value>
                    <fullName>A112 Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Time_In_Hours__c</fullName>
        <label>Time (In Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Timekeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timekeeper</label>
        <referenceTo>advpm__Timekeeper__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Amount__c</fullName>
        <formula>advpm__Time_In_Hours__c  *  advpm__Rate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Time</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Entry_Date__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Time_In_Hours__c</columns>
        <columns>advpm__Timekeeper__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>advpm__Exported_Time_Entry</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Entry_Date__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Time_In_Hours__c</columns>
        <columns>advpm__Timekeeper__c</columns>
        <columns>advpm__Exported_By__c</columns>
        <columns>advpm__Exported_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Exported__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Exported Time Entries</label>
    </listViews>
    <listViews>
        <fullName>advpm__My_Timekeeper_s_Time</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Entry_Date__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Time_In_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__My_Timekeeper_Time__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>My Time Logged As Timekeeper</label>
    </listViews>
    <listViews>
        <fullName>advpm__UnExported_Time_Entries</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Entry_Date__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Time_In_Hours__c</columns>
        <columns>advpm__Timekeeper__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Exported__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>UnExported Time Entries</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_Unit_Mandatory_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Category__r.Allocated__c == true,  ISBLANK( Business_Unit_Cluster_Segment__c )), True, False)</errorConditionFormula>
        <errorDisplayField>Business_Unit__c</errorDisplayField>
        <errorMessage>Ensure that the Business Unit is captured.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cluster_Mandatory_Check</fullName>
        <active>false</active>
        <errorConditionFormula>IF(Category__r.Allocated__c =TRUE,ISPICKVAL(Cluster__c,&quot;&quot;),FALSE)</errorConditionFormula>
        <errorDisplayField>Cluster__c</errorDisplayField>
        <errorMessage>Ensure that the cluster is captured.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_2_Week_Entry_Window</fullName>
        <active>false</active>
        <description>You may log entries for 2 weeks prior of the current date.</description>
        <errorConditionFormula>TODAY() - advpm__Entry_Date__c &gt;= 14</errorConditionFormula>
        <errorDisplayField>advpm__Entry_Date__c</errorDisplayField>
        <errorMessage>You may log entries for 2 weeks prior of the current date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Time_Entries_for_2_Week_Window</fullName>
        <active>false</active>
        <description>You may not edit time entries that were created 2 weeks prior to the current date.</description>
        <errorConditionFormula>TODAY() - DATEVALUE(CreatedDate) &gt;= 14</errorConditionFormula>
        <errorMessage>You may not edit time entries that were created 2 weeks prior to the current date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_capturing_of_Negative_Time_entry</fullName>
        <active>true</active>
        <description>[W-000386] - User must not be able to capture negative time records.</description>
        <errorConditionFormula>advpm__Time_In_Hours__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>advpm__Time_In_Hours__c</errorDisplayField>
        <errorMessage>Hours Worked cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Specify_A_Matter</fullName>
        <active>true</active>
        <description>You must specify a Matter / Deal unless you indicate the entry is Non-matter Related.</description>
        <errorConditionFormula>IF(AND(Category__r.Allocated__c == true,  ISBLANK(advpm__Matter__c)), True, False)</errorConditionFormula>
        <errorDisplayField>advpm__Matter__c</errorDisplayField>
        <errorMessage>You must either indicate the related &apos;Matter / Deal&apos; OR mark the entry as &apos;Non-matter Related&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Segment_Mandatory_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(ISPICKVAL(Cluster__c,&quot;&quot;))&amp;&amp; (Category__r.Allocated__c =TRUE),ISPICKVAL(Segment__c,&quot;&quot;),FALSE)</errorConditionFormula>
        <errorDisplayField>Segment__c</errorDisplayField>
        <errorMessage>Ensure that the Segment is captured.</errorMessage>
    </validationRules>
</CustomObject>